src/style.css
:root{
    scroll-behavior: smooth;

}

/* l[data-bs-theme="dark"]{ 
    --bs-body-color: #e8e8e8 !important ;
    --bs-body-color-rgb: 221,221,221;
    --bs-body-bg: #101112 !important;
    --bs-body-bg-rgb: 33,37,41;
}
 */

.search-wrapper{
    position: fixed;
    z-index: 100;
    top:0;
    left:0;
    width: 100%;
    padding: 1rem;
    height: 100%;
    background-color: rgba(65, 65, 65, 0.226);
}

.scary-ghost-input{
    background-color: transparent;
    border:none;
    outline: none;
    font-size: 0.99rem;
    width: 6rem;
}

.table{
    width: 100% !important;
    border-collapse: collapse !important;
    border-spacing: 0 !important;  
}

.table td{
 padding: 0.75rem !important;
 margin: 0 !important;
 display: table-cell !important;
 text-align: center !important;
}
.border-left-only{
    border-left: 1px solid var(--bs-border-color);
}


.table th{
    text-align: center;
}
.table td:hover{
    
    box-shadow:inset 0 0 0 1px #ccc;
    text-align: center;
}

.selected{
    box-shadow: inset 0 0 0 1px var(--bs-primary) !important;
}

.text-body-secondary{
    opacity: 0.5;
}
.date{
 display: flex;
 flex-direction: column;
 row-gap: 0.25rem;
 align-items: center;
}
.animate-up{
    animation:moveup 0.15s ease-in;
}
.animate-down{
    animation: moveup 0.15s ease-in;
    animation-direction: reverse;
}
.calendar-event{
   max-width: 100%;
}

.pr-5{
    padding-right: 1rem !important;
}
.badge{
    min-width:0.12rem !important;
}
.color-auto{
    color:white;

}



@media (min-width: 576px) {
    .offcanvas.show{
        resize: horizontal;
        width:40vw;
    }
}
[data-footnote-ref]::before {
    content: '[';
  }
  
  [data-footnote-ref]::after {
    content: ']';
  }

  .map { height: 180px; 
    border-radius: var(--bs-border-radius-sm);
}
.dropdown-start{
    transform: translateX(-100%);

}
#note-display img{
    width: 100%;
    height: auto;
}
#note-display code{
    border-radius:var(--bs-border-radius-sm);
}
#note-display blockquote{
    border-left: 0.25rem solid var(--bs-secondary);
    padding: 0.5rem;
    margin: 0;
}
/* #note-display pre::after{
    content: 'run code';
    padding: 0.5rem;
    border:1px solid #ccc
} */




.dragging{
   border:1px solid var(--bs-primary);
}

@keyframes moveup {
    0%{
        transform: translateY(-90%);
        opacity: 0;
    
    }
    100%{
        transform: translateY(0%);
    }
    
}

.modal.show { display: block;
padding-top: 1rem;
background-color: #10111256;
}

@media (max-width: 576px) {
    .border-left-only{
        border-left: none;
    }
    .badge{
        padding-right: 0.0rem !important;
        padding-left: 0.0rem !important;
        padding-top: 0.1rem !important;
        padding-bottom: 0.1rem !important;
        width: 0.5rem !important;
        height: 0.25rem !important;
        overflow: hidden !important;
        font-size: 0rem !important;

        color: transparent !important;

    }
    .color-auto{
        color:transparent !important;
        font-size: 0rem !important;
        
    }
}
.section-add{
    position: relative;
    cursor: pointer;
    border: 1px solid var(--bs-primary);
    border-radius: var(--bs-border-radius-sm);
    padding: 0.125rem;
    margin: 0.5rem 0;
    display: flex;
    justify-content: center;
    margin-bottom: 1rem;
    align-items: center;
    font-size: 1rem;
    font-weight: 500;
    color: var(--bs-primary);
    background-color: var(--bs-body-bg);
    box-shadow: 0 0 0 1px var(--bs-primary);
    z-index: 100;
}

.section-add::after{
    content: 'Add Section';
    position: absolute;
    top: -0.5rem;

    left: 50%;
    transform: translateX(-50%) translateY(-20%);
    
    background-color: var(--bs-body-bg);
    padding: 0.25rem;
    border-radius: var(--bs-border-radius-sm);
    color: var(--bs-primary);
    font-size: 1rem;
    font-weight: 700;
    z-index: 100;
}

.details{
    margin-top: 1rem;
    margin-bottom: 0.5 rem;

}
.summary{
    padding: 1rem 0.5rem;
    border-radius: var(--bs-border-radius-sm);
    background-color: var(--bs-primary-bg-subtle);

    
}
.list-group-item{ 
    color:var(--bs-list-group-color) !important;
}
body[theme='lux'] .table td, body[theme='lux'] .table th {
    padding: 0.25rem !important;
}

